--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "search-movies",
+  "name": "moovie",
   "version": "0.1.0",
   "private": true,
   "repository": {
@@ -17,7 +17,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
